# d2o5-rs

./: .env.example  .gitignore  Cargo.toml  README.md
src/: auth.rs  main.rs  model.rs  status.rs
src/database/: cache.rs  db.rs
src/routes/: auth.rs
templates/: login.html  register.html
