[package]
name = "d2o5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
anyhow = "1.0.66"
dotenv = "0.15.0"
env_logger = "0.9.1"
log = "0.4.17"
mongodb = "2.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1"
chrono = "0.4"
bson = {version = "2.4.0", features = ["chrono-0_4"]}
futures = "^0.3"

argon2 = { version = "0.4", features = ["std"] }
rand = "0.8.5"
